syntax = "proto3";

package MetadataEndpoint;

option csharp_namespace = "FunctionMetadataEndpoint";

import "FunctionRpc.proto";

// Interface exported by the server.
service FunctionRpc {
  rpc EventStream (stream StreamingMessage) returns (stream StreamingMessage) {}
}

message StreamingMessage {
  // Used to identify message between host and worker
  string request_id = 1;
  string worker_id = 2;

  reserved 10;
  
  // Payload of the message
  oneof content {
    AzureFunctionsRpcMessages.StartStream start_stream = 3;
    AzureFunctionsRpcMessages.FunctionsMetadataRequest functions_metadata_request = 29;
    AzureFunctionsRpcMessages.FunctionMetadataResponse function_metadata_response = 30;
  }
}

message FunctionInit {
  // list of function indexing responses
  repeated AzureFunctionsRpcMessages.FunctionLoadRequest function_load_requests_results = 1;

  // status of overall metadata request
  AzureFunctionsRpcMessages.StatusResult result = 2;
}